hphp/hack/test/typecheck/readonly/vec.php.exp
File "vec.php", line 17, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
File "vec.php", line 19, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
